.provarCaches/00D6C0000000xA6UAI/objects/cc_product_fee_channel__mdt.object
<CustomObject>
    <description>for CreateTrainingRevenueBatch.apxc</description>
    <fields>
        <fullName>channel__c</fullName>
        <label>channel</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>psc__c</fullName>
        <label>psc</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>sku__c</fullName>
        <label>sku</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <label>cc product fee channel</label>
    <listViews>
        <fullName>All_MetaData</fullName>
        <columns>MasterLabel</columns>
        <columns>DeveloperName</columns>
        <columns>NamespacePrefix</columns>
        <columns>channel__c</columns>
        <columns>psc__c</columns>
        <columns>sku__c</columns>
        <filterScope>Everything</filterScope>
        <label>All MetaData</label>
        <language>en_US</language>
    </listViews>
    <pluralLabel>cc product fee channels</pluralLabel>
</CustomObject>